--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@ html, body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background: hsl(257, 40%, 49%);
+  background: #674baf;
   /* background-attachment: fixed; */
-  background-size: 90% 100%;
+  background-size: 88% 100%;
   background-repeat: no-repeat;
   background-image:url(images/bg-desktop.svg);
 }
@@ -21,11 +21,43 @@ html, body {
                         "footer footer"
 }
 
-img#imagemTeste {
+.aside {
+  margin-top: 67px;
+}
+
+p#titulo {
+  font-family: 'Poppins', sans-serif;
+  font-size: 31.5px;
+  color: white;
+}
+
+p#corpo {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 15px;
+  color: white;
+}
+
+input#botao {
+  width: 160px;
+  height: 40px;
+  background-color: white; 
+  border-color: white;
+  font-size: 14px;
+  border-radius: 20px;
+  box-shadow: 5px 3px 12px rgba(0, 0, 0, 0.493);
+}
+
+img#imagemHeader {
   margin-top: 50px;
-  margin-left: 50px;
+  margin-left: 60px;
   width: 190px;
-  /* background: blue; */
+}
+
+img#imagemMain {
+  margin-top: 61px;
+  margin-left: 56px;
+  width: 620px;
+  height: 410px;
 }
 
 header {
